Add export whitelisting argument to JVM options in Surefire and Failsafe config